ascii min error update

--- a/hello_world.html
+++ b/hello_world.html
@@ -68,7 +68,7 @@
     <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js" crossorigin></script>
 
     <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
-    <script src="welcome_ascii.min.min.js"></script>
+    <script src="welcome_ascii.min.js"></script>
     <script src="hello_world.min.js"></script>
 
     <script src="state_world.min.js"></script>
